--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Jasleo",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.5.3",
+    "dotenv": "^16.1.4"
   },
   "devDependencies": {
     "eslint": "^8.42.0"
